--- a/Complete-Python-3-Bootcamp/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/Complete-Python-3-Bootcamp/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -26,13 +26,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    pi = 3.14\n",
+    "    return (4/3) * pi * rad**3"
    ]
   },
   {
@@ -67,13 +66,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def ran_check(num,low,high):\n",
-    "    pass"
+    "def ran_check(num,low,high):  # Assignment wants printed statement\n",
+    "    if num in range(low, high):\n",
+    "        print(\"{} is within the range of {}{}.\".format(num, low, high))\n",
+    "    else:\n",
+    "        print(\"{} is not within the range of {}-{}\".format(num, low, high))"
    ]
   },
   {
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7\n"
+      "5 is within the range of 27.\n"
      ]
     }
    ],
@@ -104,13 +104,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return num in range(low, high)"
    ]
   },
   {
@@ -153,13 +151,18 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    case = {'upper':0, 'lower':0}\n",
+    "    for letter in s:\n",
+    "        if letter.isupper():\n",
+    "            case['upper'] += 1\n",
+    "        if letter.islower():\n",
+    "            case['lower'] += 1\n",
+    "    print(\"No. of Upper case characters : {}\".format(case['upper']))\n",
+    "    print(\"No. of Lower case Characters : {}\".format(case['lower']))"
    ]
   },
   {
@@ -171,9 +174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "No. of Upper case characters : 4\n",
+      "No. of Lower case Characters : 33\n"
      ]
     }
    ],
@@ -196,13 +198,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    return list(set(lst))"
    ]
   },
   {
@@ -239,13 +239,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    product = 1\n",
+    "    for number in numbers:\n",
+    "        product *= number\n",
+    "    return product"
    ]
   },
   {
@@ -281,13 +282,12 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    new_s = s.replace(' ', '')\n",
+    "    return new_s == new_s[::-1]"
    ]
   },
   {
@@ -302,6 +302,26 @@
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palindrome('nurses run')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,36 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+    "    return set(alphabet).issubset(str1.lower().replace(' ', ''))"
    ]
   },
   {
@@ -371,10 +369,30 @@
     {
      "data": {
       "text/plain": [
-       "'abcdefghijklmnopqrstuvwxyz'"
+       "True"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefghijklmnopqrstuvwxyz'"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
